--- a/index.html
+++ b/index.html
@@ -20,3 +20,31 @@
     <button class = 'answerButtons2'> Toyota Corolla </button>
     <button class = 'answerButtons2'> Hyundai Elentra  </button>
 </body>
+<body>
+    <h2>Where was the world's first paved road specifically for cars?</h2>
+    <button class = 'answerButtons3'> Milan, Italy</button>
+    <button class = 'answerButtons3'> Queens, New York</button>
+    <button class = 'answerButtons3'> Vienna, Austria </button>
+    <button class = 'answerButtons3'> San Francisco, California </button>
+</body>
+<body>
+ <h2>Which country consumes the most gas every year?</h2>   
+    <button class = 'answerButtons4'> Mexico </button>
+    <button class = 'answerButtons4'> Russia </button>
+    <button class = 'answerButtons4'> China </button>
+    <button class = 'answerButtons4'> United States </button>
+</body>
+<body>
+    <h2>Whats the most popular color for a car?</h2>
+    <button class = 'answerButtons5'> White</button>
+    <button class = 'answerButtons5'> Black</button>
+    <button class = 'answerButtons5'> Gray</button>
+    <button class = 'answerButtons5'> Red  </button>
+</body>
+<body>
+    <h2> What brand of car does James Bond drive?</h2>
+    <button class = 'answerButtons6'> Ferrari  </button>
+    <button class = 'answerButtons6'> Porche </button>
+    <button class = 'answerButtons6'> Aston Martin  </button>
+    <button class = 'answerButtons6'> Rolls Royce </button>
+</body>
