--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
 <head>
     <div class = 'page'>
 <h1> Vehicle Quiz</h1>
+<div id="carQuiz"></div>
+<div id ='results'></div>
 <link href="style.css" rel="stylesheet">
 <script defer src="main.js"> </script>
-</div>
-</head>
-<body>
+</div> 
+ </head>
+ <body>
     <h2> What was the first car brand?</h2>
-    <button class = 'answerButtons1'> Peugeot</button>
-    <button class = 'answerButtons1'> General Motors</button>
-    <button class = 'answerButtons1'> Ford </button>
-    <button class = 'answerButtons1'> Tesla </button>
+    <button class = 'Buttons1' name = 'answerButtons1'> Peugeot</button>
+    <button class = 'Buttons1' name = 'answerButtons1'> General Motors</button>
+    <button class = 'Buttons1' name = answerButtons1> Ford </button>
+    <button class = 'Buttons1' name = 'answerButtons1'> Tesla </button>
 </body>
 <body>
     <h2> What is the most popular car in the world? </h2>
@@ -47,4 +49,4 @@
     <button class = 'answerButtons6'> Porche </button>
     <button class = 'answerButtons6'> Aston Martin  </button>
     <button class = 'answerButtons6'> Rolls Royce </button>
-</body>
+</body> 
