--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 </div> 
  </head>
  <body>
-    <h2> What was the first car brand?</h2>
-    <button class = 'Buttons1' name = 'answerButtons1'> Peugeot</button>
-    <button class = 'Buttons1' name = 'answerButtons1'> General Motors</button>
-    <button class = 'Buttons1' name = answerButtons1> Ford </button>
-    <button class = 'Buttons1' name = 'answerButtons1'> Tesla </button>
-</body>
+    <h2> Question 1 <span id= 'questionfField'></span></h2>
+    <div class = 'button-wrapper'>
+    <button id= "1"> answer 1 -<span id = 'answer1Text'></span></button>
+    <button id= "2"> answer 2 -<span id = 'answer2Text'></span></button>
+    <button id= "3"> answer 3 -<span id = 'answer3Text'></span></button>
+    <button id= "4"> answer 4 -<span id = 'answer4Text'></span></button>
+   
+<!-- </body>
 <body>
     <h2> What is the most popular car in the world? </h2>
     <button class = 'answerButtons2'> Ford Fiesta</button>
@@ -49,4 +51,4 @@
     <button class = 'answerButtons6'> Porche </button>
     <button class = 'answerButtons6'> Aston Martin  </button>
     <button class = 'answerButtons6'> Rolls Royce </button>
-</body> 
+</body>  -->
