--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </div> 
  </head>
  <body>
-    <h2> Question 1 <span id= 'questionfField'></span></h2>
+    <h2> Question1: <span id= 'questionField'></span></h2>
     <div class = 'button-wrapper'>
     <button id= "1"> answer 1 -<span id = 'answer1Text'></span></button>
     <button id= "2"> answer 2 -<span id = 'answer2Text'></span></button>
