--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <button id= "2"> answer 2 -<span id = 'answer2Text'></span></button>
     <button id= "3"> answer 3 -<span id = 'answer3Text'></span></button>
     <button id= "4"> answer 4 -<span id = 'answer4Text'></span></button>
-   
+    <p id="score">Your Score: <span id="currentScore">0</span> out of 1</p>
+    </body>
 <!-- </body>
 <body>
     <h2> What is the most popular car in the world? </h2>
