--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </div>
     <div id='nextButton'> <button>Next Question</button></div>
     <p id="score">Your Score: <span id="currentScore">0</span> out of 6</p>
+    <button id='fullReset'>Full Reset</button>
 </body>
 
 </html>
