--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id='results'></div>
     </div>
 
-    <h2>Question1: <span id='questionField'></span></h2>
+    <h2>Question: <span id='questionField'></span></h2>
     <div class='button-wrapper'>
 
         <button class="question-buttons" id="option1"> <span id='answer1Text'></span> </button> <!-- ADDED class-->
@@ -24,7 +24,7 @@
     </div>
     <div id='nextButton'> <button>Next Question</button></div>
     <p id="score">Your Score: <span id="currentScore">0</span> out of 6</p>
-    <button id='fullReset'>Full Reset</button>
+    <div id='fullReset'> <button> Full Reset</button></div>
 </body>
 
 </html>
