--- a/index.html
+++ b/index.html
@@ -13,54 +13,25 @@
         <div id="carQuiz"></div>
         <div id='results'></div>
     </div>
+    <div class='container'>
+        <h2>Question: <span id='questionField'></span></h2>
+        <div class='button-wrapper'>
 
-    <h2>Question: <span id='questionField'></span></h2>
-    <div class='button-wrapper'>
-
-        <button class="question-buttons" id="option1"> <span id='answer1Text'></span> </button> <!-- ADDED class-->
-        <button class="question-buttons" id="option2"> <span id='answer2Text'></span></button> <!-- ADDED class-->
-        <button class="question-buttons" id="option3"> <span id='answer3Text'></span></button> <!-- ADDED class-->
-        <button class="question-buttons" id="option4"> <span id='answer4Text'></span></button> <!-- ADDED class-->
+            <button class="question-buttons" id="option1"> <span id='answer1Text'></span> </button> <!-- ADDED class-->
+            <button class="question-buttons" id="option2"> <span id='answer2Text'></span></button> <!-- ADDED class-->
+            <button class="question-buttons" id="option3"> <span id='answer3Text'></span></button> <!-- ADDED class-->
+            <button class="question-buttons" id="option4"> <span id='answer4Text'></span></button> <!-- ADDED class-->
+        </div>
+        <div id='nextButton'> <button>Next Question</button></div>
+        <p id="score">Your Score: <span id="currentScore">0</span> out of 12</p>
+        <div id='fullReset'> <button> Full Reset</button></div>
+        <div class="wrapper">
+            <div class="one"> </div>
+        </div>
     </div>
-    <div id='nextButton'> <button>Next Question</button></div>
-    <p id="score">Your Score: <span id="currentScore">0</span> out of 6</p>
-    <div id='fullReset'> <button> Full Reset</button></div>
+
+
+
 </body>
 
 </html>
-<!-- </body>
-<body>
-    <h2> What is the most popular car in the world? </h2>
-    <button class = 'answerButtons2'> Ford Fiesta</button>
-    <button class = 'answerButtons2'> Chevy Malibu</button>
-    <button class = 'answerButtons2'> Toyota Corolla </button>
-    <button class = 'answerButtons2'> Hyundai Elentra  </button>
-</body>
-<body>
-    <h2>Where was the world's first paved road specifically for cars?</h2>
-    <button class = 'answerButtons3'> Milan, Italy</button>
-    <button class = 'answerButtons3'> Queens, New York</button>
-    <button class = 'answerButtons3'> Vienna, Austria </button>
-    <button class = 'answerButtons3'> San Francisco, California </button>
-</body>
-<body>
- <h2>Which country consumes the most gas every year?</h2>   
-    <button class = 'answerButtons4'> Mexico </button>
-    <button class = 'answerButtons4'> Russia </button>
-    <button class = 'answerButtons4'> China </button>
-    <button class = 'answerButtons4'> United States </button>
-</body>
-<body>
-    <h2>Whats the most popular color for a car?</h2>
-    <button class = 'answerButtons5'> White</button>
-    <button class = 'answerButtons5'> Black</button>
-    <button class = 'answerButtons5'> Gray</button>
-    <button class = 'answerButtons5'> Red  </button>
-</body>
-<body>
-    <h2> What brand of car does James Bond drive?</h2>
-    <button class = 'answerButtons6'> Ferrari  </button>
-    <button class = 'answerButtons6'> Porche </button>
-    <button class = 'answerButtons6'> Aston Martin  </button>
-    <button class = 'answerButtons6'> Rolls Royce </button>
-</body>  -->
